# inventory-analysis

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/inventory_analysis/: __init__.py  equipment_analysis.py
src/inventory_analysis/equipment/: dataprep.py
