[project]
name = "inventory-analysis"
version = "0.1.0"
description = "Various notebooks for inventory analysis."
readme = "README.md"
authors = [
    { name = "Rajdeep Sandhu", email = "168480080+rajdeep-sandhu@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "marimo[recommended]>=0.23.14",
]

[project.scripts]
inventory-analysis = "inventory_analysis:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
